[gd_scene load_steps=4 format=3 uid="uid://bj00lg3rc5lmg"]

[ext_resource type="Script" path="res://nodes/stage/stage_interface/status_effect_visual/status_effect_visual.gd" id="1_wodeu"]
[ext_resource type="Texture2D" uid="uid://22d80ld16v4l" path="res://resources/images/placeholder_(de)buff_icon.png" id="2_jabus"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uied7"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="StatusEffectVisual" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_wodeu")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 49.0
offset_bottom = 24.0

[node name="Background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uied7")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconContainer" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="IconTextureRect" type="TextureRect" parent="Control/HBoxContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("2_jabus")
expand_mode = 1

[node name="StackLabel" type="Label" parent="Control/HBoxContainer/IconContainer/IconTextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "999"
horizontal_alignment = 2
vertical_alignment = 2

[node name="DurationContainer" type="Control" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DurationLabel" type="Label" parent="Control/HBoxContainer/DurationContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
